[gd_scene load_steps=17 format=3 uid="uid://d0ysh8tg1stml"]

[ext_resource type="Script" path="res://scenes/Options.gd" id="1_thur8"]
[ext_resource type="Theme" uid="uid://b0qka3g3xxcs5" path="res://assets/fonts/font_Theme.tres" id="2_bsiqw"]
[ext_resource type="Texture2D" uid="uid://b7g26utf1kjgb" path="res://assets/sprites/UI/Up Square Button.png" id="3_vckco"]
[ext_resource type="Texture2D" uid="uid://dvng04me8ctfp" path="res://assets/sprites/UI/Audio Square Button.png" id="4_1m1bk"]
[ext_resource type="Texture2D" uid="uid://dxt48w4aydydh" path="res://assets/sprites/UI/Up Square Button Pressed.png" id="4_3mph5"]
[ext_resource type="Texture2D" uid="uid://bjggg0n3rv7ri" path="res://assets/sprites/UI/Down Square Button.png" id="4_yjocm"]
[ext_resource type="Texture2D" uid="uid://d0ie1cu2132ir" path="res://assets/sprites/UI/Up Square Button Hover.png" id="5_vxw38"]
[ext_resource type="Texture2D" uid="uid://d2rtrhgiy24xl" path="res://assets/sprites/UI/Back Square Button.png" id="6_clgsk"]
[ext_resource type="Texture2D" uid="uid://by0gheob4m2kb" path="res://assets/sprites/UI/Down Square Button Pressed.png" id="7_cex3f"]
[ext_resource type="Texture2D" uid="uid://yjlbeensuvfd" path="res://assets/sprites/UI/Down Square Button Hover.png" id="8_sxipy"]
[ext_resource type="Texture2D" uid="uid://dkbiel68bbbys" path="res://assets/sprites/UI/Audio Square Button Pressed.png" id="10_5qumq"]
[ext_resource type="Texture2D" uid="uid://bt2awrjgsdyde" path="res://assets/sprites/UI/Back Square Button Pressed.png" id="11_nagnq"]
[ext_resource type="Texture2D" uid="uid://0es5a3djs8mm" path="res://assets/sprites/UI/Audio Square Button Hover.png" id="11_q4d3w"]
[ext_resource type="Texture2D" uid="uid://clqa3wl8aq3d6" path="res://assets/sprites/UI/Back Square Button Hover.png" id="12_jq7cx"]

[sub_resource type="Gradient" id="Gradient_kx5uo"]
offsets = PackedFloat32Array(0, 0.485455, 0.758065)
colors = PackedColorArray(0.192556, 0.192556, 0.192556, 1, 3.36915e-07, 0, 0.559719, 1, 0.0768358, 0.0768358, 0.0768358, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qxjmh"]
gradient = SubResource("Gradient_kx5uo")
fill_from = Vector2(0, 1)
metadata/_snap_enabled = true

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_thur8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_qxjmh")

[node name="Options" type="Label" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 56.0
offset_right = 947.0
offset_bottom = 156.0
theme = ExtResource("2_bsiqw")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 80
text = "OPTIONS"
horizontal_alignment = 1

[node name="Volume" type="Label" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 171.0
offset_right = 438.0
offset_bottom = 235.0
theme = ExtResource("2_bsiqw")
theme_override_font_sizes/font_size = 50
text = "Volume"

[node name="Back" type="Label" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 105.0
offset_right = 140.0
offset_bottom = 157.0
theme = ExtResource("2_bsiqw")
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="ChangeSong" type="Label" parent="."]
layout_mode = 0
offset_left = 648.0
offset_top = 168.0
offset_right = 993.0
offset_bottom = 232.0
theme = ExtResource("2_bsiqw")
theme_override_font_sizes/font_size = 50
text = "Change song"

[node name="VolumeUpButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -76.0
offset_right = -128.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("3_vckco")
texture_pressed = ExtResource("4_3mph5")
texture_hover = ExtResource("5_vxw38")
stretch_mode = 3

[node name="VolumeDownButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = 36.0
offset_right = -128.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("4_yjocm")
texture_pressed = ExtResource("7_cex3f")
texture_hover = ExtResource("8_sxipy")
stretch_mode = 3

[node name="NextButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 208.0
offset_top = -60.0
offset_right = 408.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("4_1m1bk")
texture_pressed = ExtResource("10_5qumq")
texture_hover = ExtResource("11_q4d3w")
stretch_mode = 3

[node name="Song" type="Label" parent="."]
layout_mode = 0
offset_left = 664.0
offset_top = 376.0
offset_right = 1002.0
offset_bottom = 416.0
theme = ExtResource("2_bsiqw")
text = "Cancion"
horizontal_alignment = 1

[node name="BackButton" type="TextureButton" parent="." groups=["boton"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -291.0
offset_right = -313.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("6_clgsk")
texture_pressed = ExtResource("11_nagnq")
texture_hover = ExtResource("12_jq7cx")
stretch_mode = 3

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 240.0
offset_right = 437.0
offset_bottom = 442.0
max_value = 1.0
step = 0.005
value = 0.3
allow_greater = true
allow_lesser = true
fill_mode = 3
show_percentage = false

[node name="VSlider" type="VSlider" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 240.0
offset_right = 437.0
offset_bottom = 447.0
scale = Vector2(1, 0.97493)
max_value = 1.0
step = 0.001
value = 0.3

[connection signal="mouse_entered" from="VolumeUpButton" to="." method="_on_volume_up_button_mouse_entered"]
[connection signal="pressed" from="VolumeUpButton" to="." method="_on_volume_up_button_pressed"]
[connection signal="mouse_entered" from="VolumeDownButton" to="." method="_on_volume_down_button_mouse_entered"]
[connection signal="pressed" from="VolumeDownButton" to="." method="_on_volume_down_button_pressed"]
[connection signal="mouse_entered" from="NextButton" to="." method="_on_next_button_mouse_entered"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="mouse_entered" from="BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="VSlider" to="." method="_on_v_slider_value_changed"]
